fixed overlap

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ filter: blur(10px);
 pointer-events: none;
 z-index: -2;
 transform: translate(0%, 0%);
-transition: opacity 0.5s linear;
+transition: opacity 2s ease-out;
 }
 
  /*.trail {
